update horner, morelli and squintani reference

--- a/draft.tex
+++ b/draft.tex
@@ -446,7 +446,7 @@ This is simplified to preferring the concessions separating equilibrium if and o
 
 \item Greig, J. Michael and Paul F. Diehl. (2006). ``Softening Up: Making Conflicts More Amenable to Diplomacy,'' \emph{International Interactions} 32, 355-84. 
 
-\item Horner, Johannes, Massimo Morelli and Francesco Squintani. (2010). ``Mediation and Peace.'' Cowles foundation. Unpublished manuscript. 
+\item Horner, Johannes, Massimo Morelli and Francesco Squintani. (2010). ``Mediation and Peace.'' \emph{The Review of Economic Studies} 84, 1483-1501. 
 
 \item Iannaccone, Laurence. (1992). ``Sacrifice and Stigma: reducing free-riding in cults, communes, and other collectives.'' \emph{Journal of Political Economy} 100:2, 271-291.
 
