finish updating reference list for previous citations

--- a/draft.tex
+++ b/draft.tex
@@ -404,7 +404,7 @@ This is simplified to preferring the concessions separating equilibrium if and o
 
 \item Allee, Todd L. and Paul K. Huth. (2006). ``Legitimizing Dispute Settlement: International Legal Rulings as Domestic Political Cover." \emph{American Political Science Review} 100:2, 219-34. 
 
-\item Beardsley, Kyle. (2010). ``Pain, Pressure, and Political Cover: Explaining Mediation Incidence." \emph{Journal of Peace Research}. Forthcoming. 
+\item Beardsley, Kyle. (2010). ``Pain, Pressure, and Political Cover: Explaining Mediation Incidence." \emph{Journal of Peace Research}. 47:2, 395-406. 
 
 \item Beardsley, Kyle, David M. Quinn, Bidisha Biswas, and Jonathan Wilkenfeld. (2006). ``Mediation Style and Crisis Outcomes." \emph{The Journal of Conflict Resolution} 50:1,  58-86. 
 
