revise old intro, remove break for old lit review/model intro secion

--- a/draft.tex
+++ b/draft.tex
@@ -48,14 +48,11 @@ When two parties are engaged in conflict and each distrusts the other's willingn
 
 In negotiations with its neighbors, Israel is hesitant to give certain concessions. The Golan Heights, captured from Syria during the 1967 War, is a particular point of contention in Israeli-Syrian relations. While the Golan Heights does not have the West Bank's historic or religious importance, Israel values it for its highly strategic location. The Golan Heights could be a useful concession, but Israel senses that were she to give over the land, Syria may ultimately use the concession against them. This same hesitancy exists with the West Bank settlements. Many are located on hilltops that could offer strategic military outposts for forces hostile to Israel. When it occasionally abandons settlements, Israel generally dismantles all infrastructure, including water and electricity, and bulldozes the buildings. Although inefficient, this reduces the possibility of those settlements being used against Israeli interests. Without trust, the most efficient concessions cannot be made.
 
-This holds for concessions other than land. Russia is loathe to cede further autonomy to Chechnya, even though independence could hypothetically relieve tensions and reduce violence. If Chechen independence could in fact lead to lowered violence, it is possible that this move would be in Russia's best interest. But the Russians perceive, perhaps correctly, that any move towards autonomy might only give Chechens further leverage against the Kremlin. They also realize that were Chechnya to realize its hopes, other ethnic areas like Tatarstan might be emboldened to demand more. From the Russian perspective, granting the concession of increased autonomy would likely have future costs.
+This holds for concessions other than land. Russia is loathe to cede further autonomy to Chechnya, even though it could hypothetically relieve tensions and reduce violence. If Chechen autonomy could in fact lead to lowered violence, it is possible that this move would be in Russia's best interest. But the Russians perceive, perhaps correctly, that any move towards autonomy might only give Chechens further leverage against the Kremlin. From the Russian perspective, granting the concession of increased autonomy would likely have future costs.
 
-In these and many other situations, a lack of trust is an impediment to peace, preventing parties from making necessary concessions. Mediation has long been understood as a mechanism for reducing mistrust, but in most of the published literature on international conflict mediation lacks a rigorous theoretical framework.
+%In these and many other situations, a lack of trust is an impediment to peace, preventing parties from making necessary concessions. Mediation has long been understood as a mechanism for reducing mistrust, but in much of the published literature on international conflict mediation lacks a rigorous theoretical framework.
 
-This paper has three parts. First, it explores the role of costly concessions in a game theoretic framework, evoking a two-sided version of Spence signaling (1973). Second, after considering existing explanations for inefficient concessions, it proposes a new theoretical explanation for why inefficiency might occur in a conflict setting: inefficient concessions may be preferred if the most efficient concessions are seen as having additional, future costs.\footnote{The type of inefficient concessions addressed here are those whose value to the recipient are lower than the cost to the giver.} The Golan Heights, for example, will not be conceded if Israel foresees future security risks that outweigh the immediate benefits of peace. Finally, this paper uses a mechanism design framework to model a third party's role in bringing about more efficient concessions. Many scholars contend that mediators with enforcement capabilities can help to resolve conflict; this analysis provides an explanation for why enforcement is effective.
-
-
-\section{Literature review and model introduction} 
+This paper uses a two-sided Spence signaling (1973) model to propose a new theoretical explanation for why inefficiency might occur in a conflict setting: inefficient concessions may be preferred if the most efficient concessions are seen as having additional, future costs.\footnote{The type of inefficient concessions addressed here are those whose value to the recipient are lower than the cost to the giver.} The Golan Heights, for example, will not be conceded if Israel foresees future security risks that outweigh the immediate benefits of peace. We then suggest a new explanation for the effectiveness of third-party mediation by demonstrating in a mechanism design framework that a mediator can facilitate more efficient concessions.
 
 
 While an integral part of conflict literature, concessions have not been adequately addressed by theoretical research. The broader literature that attempts to model war has included concessions as part of bargaining, but has not explicitly considered the role of concessions in achieving peace. Schelling's \emph{Arms and Influence} (1966) modeled war with a game theoretic framework, and Powell (1999) has also defended the use of modeling in understanding war. Fearon (1995), Powell (1996a and 1996b, 2006) and others consider war to be a bargaining failure, caused by commitment problems and asymmetric information. In these models war can be averted by splitting the pie (i.e. the disputed territory) in a way acceptable to both parties. Concessions are modeled as offering part of the pie to the other party. %LAKE: You need to situation what you’re doing in the bargaining literature and relate your model to its principal results. WAR IS WELL ESTABLISHED AS BARGAINING!!!
